<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A2337"
    tools:context=".fragments.DeleteFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:gravity="center"
            android:text="@string/mnu_delete"
            android:textColor="#C8D35E"
            android:textSize="@dimen/size30"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinTen"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="@dimen/size10"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:contentDescription="@string/text_ten"
            android:textSize="@dimen/size30" />

        <TextView
            android:id="@+id/edtImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_image"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/edtUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_url_movie"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/edtmota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_mota"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/edtDaoDien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_daoDien"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/DienVien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_dienVien"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/edtTheLoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_theLoai"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/edtThoiLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_thoiLuong"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/edtQuocGia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_quocGia"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <TextView
            android:id="@+id/edtNamSX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:text="@string/text_namSX"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

        <Button
            android:id="@+id/btnDelete1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            android:layout_marginBottom="@dimen/size10"
            android:layout_marginStart="@dimen/size60"
            android:layout_marginEnd="@dimen/size60"
            android:gravity="center"
            android:text="@string/mnu_delete"
            android:textColor="#0A2337"
            android:background="#00BCD4"
            android:textSize="@dimen/size25"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
