<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0A2337"
    tools:context=".fragments.UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:gravity="center"
            android:text="@string/mnu_update"
            android:textColor="#C8D35E"
            android:textSize="@dimen/size30"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:inputType="text"

            android:textAlignment="viewStart"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_image"
            android:inputType="textUri"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_url_movie"
            android:inputType="textUri"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtmota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_mota"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtDaoDien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_daoDien"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/DienVien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_dienVien"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtTheLoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_theLoai"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtThoiLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_thoiLuong"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtQuocGia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_quocGia"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <EditText
            android:id="@+id/edtNamSX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:hint="@string/text_namSX"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size20" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10"
            android:layout_marginBottom="@dimen/size10"
            android:layout_marginStart="@dimen/size60"
            android:layout_marginEnd="@dimen/size60"
            android:gravity="center"
            android:text="@string/text_save"
            android:textColor="#0A2337"
            android:background="#00BCD4"
            android:textSize="@dimen/size25"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
