<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment"
    android:background="#0A2337">

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAccount"
        android:textSize="@dimen/size30"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size20"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tvAccount"
        android:padding="@dimen/size10"
        android:gravity="center"
        android:weightSum="10"
        >
        <TextView
            android:id="@+id/tvEmail"
            android:background="#CD4C42"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEmail"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"
            android:gravity="center"
            android:layout_margin="@dimen/size10"
            />
        <TextView
            android:id="@+id/tvChangePassword"
            android:background="#CD4C42"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textChangePassword"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"
            android:gravity="center"
            android:layout_margin="@dimen/size10"
            />
        <EditText
            android:id="@+id/edtNewPassword"
            android:background="#CD4C42"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_newPass"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"
            android:gravity="center"
            android:layout_margin="@dimen/size10"
            android:inputType="textPassword"

            android:visibility="gone"
            />
        <EditText
            android:id="@+id/edtNewPassword1"
            android:background="#CD4C42"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textCo_Password"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"
            android:gravity="center"
            android:layout_margin="@dimen/size10"
            android:inputType="textPassword"

            android:visibility="gone"
            />
        <TextView
            android:id="@+id/btnSave"
            android:background="#CD4C42"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_save"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"
            android:gravity="center"
            android:layout_margin="@dimen/size10"

            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tvSignOut"
            android:background="#CD4C42"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"
            android:gravity="center"
            android:layout_margin="@dimen/size10"
            />
    </LinearLayout>
</RelativeLayout>